--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/layout/default.xml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/layout/default.xml
@@ -14,7 +14,7 @@
         <attribute name="class" value="gradient" />
         <attribute name="class" value="bg-fg" />
         <attribute name="x-data" value="{}" />
-        <attribute name="@private-content-loaded.window" value="$store.cart.setCartItems($event.detail.data.cart?.items || []); console.log('prv cntnt')" />
+        <attribute name="@private-content-loaded.window" value="$store.cart.setCartItems($event.detail.data.cart?.items || []);" />
 
 
         <referenceContainer name="main.content"  htmlClass="page-main overflow-x-hidden"/>
