--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-button.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-button.phtml
@@ -14,7 +14,7 @@ $cartTotals = $cart->getSerializedCartTotals();
 ?>
 
 <button
-  x-init='$store.cart.updateTotalSegments(<?= $cartTotals ?>)'
+  x-init='$store.cart.setCartTotals(<?= $cartTotals ?>)'
   id="cart-button"
   class="md:button--filled-white button ghost-primary icon-button icon-button--size-lg col-start-5 md:m-2 contrast-more:md:border contrast-more:md:border-secondary-700"
   x-a11y-trap-element="$store.transition.isPreviewActive && !$store.resizable.isVisible()"
