--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-totals.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-totals.phtml
@@ -14,122 +14,147 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
 $isCartPage = $block->getData('isCartPage');
 ?>
 <div
-  class="absolute left-0 right-0 top-0 origin-bottom -translate-y-[2.5rem] text-text-on-fg transition-transform duration-700 motion-reduce:transition-none md:mb-0 md:w-full <?= $isCartPage ? 'md:relative md:translate-y-0 md:pointer-events-auto' : '' ?>"
-  :class="
-  {
-    '-translate-y-full': isTotalsExpanded,
-    '-translate-y-[2.5rem] pointer-events-none': !isTotalsExpanded
-  }
-"
+  class="contents"
+  x-data="{
+    excludingTaxMessage: '<?= $escaper->escapeJs(__('Excl. Tax')) ?>',
+    includingTaxMessage: '<?= $escaper->escapeJs(__('Incl. Tax')) ?>',
+    get cartTotals() { return $store.cart.cartTotals }
+  }"
 >
+
   <div
-    class="pointer-events-none <?= $isCartPage ? 'md:hidden' : '' ?> relative top-0 h-10 bg-gradient-to-t from-[#00000010] via-transparent to-transparent"
-  ></div>
-  <div
-    class="flex flex-col gap-4 bg-white <?= $isCartPage ? 'max-md:px-4 md:pb-4' : 'px-4 pointer-events-none' ?> pt-4 [.popup\_\_wrapper--visible_&]:pointer-events-auto [.resizable--visible_&]:pointer-events-auto"
-    :inert="<?= $isCartPage ? '$store.main.isMobile && ' : '' ?>!isTotalsExpanded"
-  >
-    <div class="flex items-center justify-between pt-2">
-      <h2><?= __('Order summary') ?></h2>
-      <button
-        type="button"
-        class="button button--outline-secondary icon-button icon-button--size-xs <?= $isCartPage ? 'md:hidden' : '' ?>"
-        :aria-label="isTotalsExpanded ? `<?= __('Collapse') ?>` : `<?= __('Expand') ?>`"
-        @click="isTotalsExpanded = !isTotalsExpanded"
-        @transitionend.stop
-      >
-        <span :class="{ 'rotate-180': isTotalsExpanded }">
-          <?= $hyvaicons->renderHtml('chevron-up') ?>
-        </span>
-      </button>
-    </div>
-
-    <!-- TODO: Do they include tax and stuff? refactor for each segment. -->
-    <template
-      x-for="segment in $store.cart.totalSegments"
-      :key="segment.code"
-    >
-      <div
-        class="flex flex-col gap-3 text-text-100 contrast-more:text-secondary-700"
-        x-show="segment.value > 0"
-      >
-        <div class="flex justify-between">
-          <p x-text="segment.title"></p>
-          <p x-text="hyva.formatPrice(segment.value)"></p>
-        </div>
-      </div>
-    </template>
-
-    <hr class="divider -mx-4 contrast-more:bg-secondary-700 <?php $isCartPage ? 'md:hidden' : '' ?>">
-  </div>
-</div>
-
-<div
-  class="<?= !$isCartPage ? 'pointer-events-none' : '' ?> relative -mx-4 rounded-b-md bg-white px-4 text-text-on-fg transition-opacity duration-300 md:pb-4 max-md:px-3 max-md:pb-5 [.popup\_\_main_&]:pb-3 [.popup\_\_wrapper--visible_&]:pointer-events-auto [.resizable--visible_&]:pointer-events-auto "
-  :class="
+    class="absolute left-0 right-0 top-0 origin-bottom -translate-y-[2.5rem] text-text-on-fg transition-transform duration-700 motion-reduce:transition-none md:mb-0 md:w-full <?= $isCartPage ? 'md:relative md:translate-y-0 md:pointer-events-auto' : '' ?>"
+    :class="
       {
-        'opacity-0': isCartEmpty,
-        'opacity-1': !isCartEmpty,
-        'hidden': isRemoveContent
+        '-translate-y-full': isTotalsExpanded,
+        '-translate-y-[2.5rem] pointer-events-none': !isTotalsExpanded
       }
     "
->
-  <div class="flex items-center justify-between overflow-x-hidden bg-fg pt-4 max-md:px-3">
-    <h2><?= __('Grand total') ?></h2>
+  >
     <div
-      class="flex translate-x-0 items-center gap-5 transition-transform delay-200 duration-300 motion-reduce:transition-none"
-      :class="
-        {
-          'translate-x-11': isTotalsExpanded,
-          'translate-x-0 delay-200': !isTotalsExpanded,
-        }
-      "
+      class="pointer-events-none <?= $isCartPage ? 'md:hidden' : '' ?> relative top-0 h-10 bg-gradient-to-t from-[#00000010] via-transparent to-transparent"
+    ></div>
+    <div
+      class="flex flex-col gap-4 bg-white <?= $isCartPage ? 'max-md:px-4 md:pb-4' : 'px-4 pointer-events-none' ?> pt-4 [.popup\_\_wrapper--visible_&]:pointer-events-auto [.resizable--visible_&]:pointer-events-auto"
+      :inert="<?= $isCartPage ? '$store.main.isMobile && ' : '' ?>!isTotalsExpanded"
     >
-      <div>
-        <p
-          class="font-bold"
-          x-text="hyva.formatPrice($store.cart.grandTotal)"
-        ></p>
+      <div class="flex items-center justify-between pt-2">
+        <h2><?= __('Order summary') ?></h2>
+        <button
+          type="button"
+          class="button button--outline-secondary icon-button icon-button--size-xs <?= $isCartPage ? 'md:hidden' : '' ?>"
+          :aria-label="isTotalsExpanded ? `<?= __('Collapse') ?>` : `<?= __('Expand') ?>`"
+          @click="isTotalsExpanded = !isTotalsExpanded"
+          @transitionend.stop
+        >
+          <span :class="{ 'rotate-180': isTotalsExpanded }">
+            <?= $hyvaicons->renderHtml('chevron-up') ?>
+          </span>
+        </button>
       </div>
 
-      <button
-        type="button"
-        class="button button--outline-secondary icon-button icon-button--size-xs <?= $isCartPage ? 'md:hidden' : '' ?>"
-        :aria-label="isTotalsExpanded ? `<?= __('Collapse') ?>` : `<?= __('Expand') ?>`"
-        @click="isTotalsExpanded = !isTotalsExpanded"
-        @transitionend.stop
-      >
-        <span :class="{ 'rotate-180': isTotalsExpanded }">
-          <?= $hyvaicons->renderHtml('chevron-up') ?>
-        </span>
-      </button>
+      <div class="flex flex-col gap-3 text-text-100 contrast-more:text-secondary-700">
+        <template
+          x-for="segment in cartTotals.total_segments"
+          :key="segment.code"
+        >
+          <div class="contents">
+            <template x-if="segment.code === 'subtotal'">
+              <?= $template->render('Magento_Theme::html/header/cart/totals/subtotal.phtml') ?>
+            </template>
+
+            <template x-if="segment.code === 'shipping'">
+              <?= $template->render('Magento_Theme::html/header/cart/totals/shipping.phtml') ?>
+            </template>
+
+            <template x-if="segment.code === 'tax'">
+              <?= $template->render('Magento_Theme::html/header/cart/totals/tax.phtml') ?>
+            </template>
+
+            <template x-if="segment.code === 'grand_total'">
+              <?= $template->render('Magento_Theme::html/header/cart/totals/grand-total.phtml') ?>
+            </template>
+
+            <template x-if="segment.code === 'discount'">
+              <div class="flex justify-between">
+                <p x-text="segment.title"></p>
+                <p x-text="hyva.formatPrice(segment.value)"></p>
+              </div>
+            </template>
+          </div>
+        </template>
+      </div>
+      <hr class="divider -mx-4 contrast-more:bg-secondary-700 <?php $isCartPage ? 'md:hidden' : '' ?>">
     </div>
   </div>
 
-  <div class="mt-4 flex flex-col gap-4 rounded-b-xl bg-fg max-md:px-3">
-    <div class="flex gap-4">
-      <a
-        href="<?= $escaper->escapeUrl($block->getUrl('checkout')) ?>"
-        x-element-transition-trigger
-        class="button button--filled-primary h-11 w-full"
-        :class="{ 'button--disabled': $store.cart.isLoading }"
+  <div
+    class="<?= !$isCartPage ? 'pointer-events-none' : '' ?> relative -mx-4 rounded-b-md bg-white px-4 text-text-on-fg transition-opacity duration-300 md:pb-4 max-md:px-3 max-md:pb-5 [.popup\_\_main_&]:pb-3 [.popup\_\_wrapper--visible_&]:pointer-events-auto [.resizable--visible_&]:pointer-events-auto "
+    :class="
+        {
+          'opacity-0': isCartEmpty,
+          'opacity-1': !isCartEmpty,
+          'hidden': isRemoveContent
+        }
+      "
+  >
+    <div class="flex items-center justify-between overflow-x-hidden bg-fg pt-4 max-md:px-3">
+      <h2 x-text="`<?= __('Grand total') ?> (${excludingTaxMessage})`"></h2>
+      <div
+        class="flex translate-x-0 items-center gap-5 transition-transform delay-200 duration-300 motion-reduce:transition-none"
+        :class="
+          {
+            'translate-x-11': isTotalsExpanded,
+            'translate-x-0 delay-200': !isTotalsExpanded,
+          }
+        "
       >
-        <?= __('Secure checkout') ?>
-        <span class="button__icon ml-3">
-          <?= $hyvaicons->renderHtml('lock') ?>
-        </span>
-      </a>
+        <div>
+          <p
+            class="font-bold"
+            x-text="hyva.formatPrice(cartTotals.grand_total)"
+          ></p>
+        </div>
 
-      <a
-        href="<?= $escaper->escapeUrl($block->getUrl('checkout/cart')) ?>"
-        x-element-transition-trigger
-        class="button button--outline-primary h-11 <?= $isCartPage ? 'md:hidden' : '' ?>"
-      >
-        <?= __('View cart') ?>
-        <span class="button__icon ml-3">
-          <?= $hyvaicons->renderHtml('cart-empty') ?>
-        </span>
-      </a>
+        <button
+          type="button"
+          class="button button--outline-secondary icon-button icon-button--size-xs <?= $isCartPage ? 'md:hidden' : '' ?>"
+          :aria-label="isTotalsExpanded ? `<?= __('Collapse') ?>` : `<?= __('Expand') ?>`"
+          @click="isTotalsExpanded = !isTotalsExpanded"
+          @transitionend.stop
+        >
+          <span :class="{ 'rotate-180': isTotalsExpanded }">
+            <?= $hyvaicons->renderHtml('chevron-up') ?>
+          </span>
+        </button>
+      </div>
+    </div>
+
+    <div class="mt-4 flex flex-col gap-4 rounded-b-xl bg-fg max-md:px-3">
+      <div class="flex gap-4">
+        <a
+          href="<?= $escaper->escapeUrl($block->getUrl('checkout')) ?>"
+          x-element-transition-trigger
+          class="button button--filled-primary h-11 w-full"
+          :class="{ 'button--disabled': $store.cart.isLoading }"
+        >
+          <?= __('Secure checkout') ?>
+          <span class="button__icon ml-3">
+            <?= $hyvaicons->renderHtml('lock') ?>
+          </span>
+        </a>
+
+        <a
+          href="<?= $escaper->escapeUrl($block->getUrl('checkout/cart')) ?>"
+          x-element-transition-trigger
+          class="button button--outline-primary h-11 <?= $isCartPage ? 'md:hidden' : '' ?>"
+        >
+          <?= __('View cart') ?>
+          <span class="button__icon ml-3">
+            <?= $hyvaicons->renderHtml('cart-empty') ?>
+          </span>
+        </a>
+      </div>
     </div>
   </div>
 </div>
