--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/layout/default_head_blocks.xml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/layout/default_head_blocks.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0"?>
-<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <head>
-      <font src="fonts/Satoshi-Medium.woff2"/>
-      <font src="fonts/Satoshi-Bold.woff"/>
+        <font src="fonts/Satoshi-Medium.woff2"/>
+        <font src="fonts/Satoshi-Bold.woff"/>
+        <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" type="text/javascript"/>
     </head>
 </page>
