--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/breadcrumbs.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/breadcrumbs.phtml
@@ -1,6 +1,11 @@
 <?php
 
-$arrowSvg = file_get_contents($block->getViewFileUrl('images/breadcrumb.svg'));
+use Hyva\Theme\ViewModel\SvgIcons;
+
+/** @var SvgIcons $hyvaicons */
+$hyvaicons = $viewModels->require(SvgIcons::class);
+
+//$arrowSvg = file_get_contents($block->getViewFileUrl('images/breadcrumb-chevron-right.svg'));
 
 // TODO: Make dynamic
 $isAlpineTemplate = false;
@@ -22,8 +27,7 @@ if (in_array($template, ['collection', 'product', 'search'])) {
         role="navigation"
         aria-label="<?= __('general.breadcrumbs.aria_label') ?>"
     >
-        <!-- I made padding x 100px to show to breadcrumb fully because it was invisible -->
-        <div role="list" class="truncate px-[100px]">
+        <div role="list" class="truncate">
             <?php foreach ($crumbs as $crumbName => $crumbInfo) : ?>
                 <div role="listitem" class="breadcrumb <?= $block->escapeHtmlAttr($crumbName) ?>">
                     <?php if ($crumbInfo['link']) : ?>
@@ -37,7 +41,7 @@ if (in_array($template, ['collection', 'product', 'search'])) {
                             class="mx-4 inline-block text-neutral-500 contrast-more:text-secondary-700"
                             aria-hidden="true"
                         >
-                            <?php echo $arrowSvg; ?>
+                            <?= $hyvaicons->renderHtml('breadcrumb-chevron-right'); ?>
                         </div>
 
                         <!-- TODO: Many non existent variables must be implemented -->
@@ -61,7 +65,7 @@ if (in_array($template, ['collection', 'product', 'search'])) {
                                     <div role="listitem"
                                          class="mx-4 inline-block text-neutral-500 contrast-more:text-secondary-700"
                                          aria-hidden="true">
-                                        <?= $arrowSvg ?>
+                                        <?= $hyvaicons->renderHtml('breadcrumb-chevron-right'); ?>
                                     </div>
                                     <div role="listitem" class="breadcrumb">
                                         <?= htmlspecialchars($pageData['title'] ?? '', ENT_QUOTES, 'UTF-8') ?>
@@ -104,7 +108,7 @@ if (in_array($template, ['collection', 'product', 'search'])) {
                                             class="mx-4 inline-block text-neutral-500 contrast-more:text-secondary-700"
                                             aria-hidden="true"
                                         >
-                                            <?php echo $arrowSvg; ?>
+                                            <?= $hyvaicons->renderHtml('breadcrumb-chevron-right'); ?>
                                         </div>
                                     <?php endif; ?>
                                     <div role="listitem" class="breadcrumb">
@@ -143,7 +147,7 @@ if (in_array($template, ['collection', 'product', 'search'])) {
                                             class="mx-4 inline-block text-neutral-500 contrast-more:text-secondary-700"
                                             aria-hidden="true"
                                         >
-                                            <?php echo $arrowSvg; ?>
+                                            <?= $hyvaicons->renderHtml('breadcrumb-chevron-right'); ?>
                                         </div>
                                         <div role="listitem" class="breadcrumb">
                                             <?= implode(' + ', $currentTags) ?>
@@ -164,7 +168,7 @@ if (in_array($template, ['collection', 'product', 'search'])) {
                                         class="mx-4 inline-block text-neutral-500 contrast-more:text-secondary-700"
                                         aria-hidden="true"
                                     >
-                                        <?php echo $arrowSvg; ?>
+                                        <?= $hyvaicons->renderHtml('breadcrumb-chevron-right'); ?>
                                     </div>
                                     <div role="listitem" class="breadcrumb">
                                         <?= $articleTitle ?>
