--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/forgotpassword.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/forgotpassword.phtml
@@ -46,9 +46,9 @@ $recaptcha = $block->getData('viewModelRecaptcha');
                 <?= $block->getChildHtml('form_fields_before') ?>
                 <?= $recaptcha ? $recaptcha->getInputHtml(ReCaptcha::RECAPTCHA_FORM_ID_CUSTOMER_FORGOT_PASSWORD) : '' ?>
                 <fieldset class="fieldset">
-                    <div class="flex w-full flex-col items-center">
-                        <h2 class="font-bold text-xxl">Reset your password</h2>
-                        <h5 class="mt-3 text-[14px] text-[#797979]">We will send you an email to reset your password</h5>
+                    <div class="text-center">
+                        <h2 class="mb-3 w-full text-2xl sm:mb-4"><?= __('Reset your password') ?></h2>
+                        <p class="mb-7 text-md text-text-500 sm:text-center"><?= __('We will send you an email to reset your password') ?></p>
                     </div>
                     <div class="field email required mt-6">
                         <label for="email_address" class="label hidden">
@@ -60,7 +60,7 @@ $recaptcha = $block->getData('viewModelRecaptcha');
                                    name="email"
                                    alt="email"
                                    id="email_address"
-                                   class="h-[44px] rounded-[0.5rem] w-full border px-5 py-4 border-text-50 contrast-more:border-secondary-700 contrast-more:placeholder-secondary-700"
+                                   class="input__field input__field--outline bg-bg-500 px-5 py-4 "
                                    autocomplete="<?= $isAutocompleteEnabled ? 'username' : 'off' ?>"
                                    required
                                    value="<?= $escaper->escapeHtmlAttr($block->getEmailValue()) ?>">
@@ -73,16 +73,12 @@ $recaptcha = $block->getData('viewModelRecaptcha');
                 </fieldset>
                 <div class="actions-toolbar">
                     <div class="primary">
-                        <button type="submit"
-                                class="rounded-[0.5rem] mt-8 w-full rounded-[--buttons-radius] bg-primary-bg px-6 py-4 text-white"
-                            <?php if ($forgotPasswordButtonViewModel->disabled()): ?> disabled data-recaptcha-btn<?php endif; ?>
-                        >
+                        <button type="submit" class="button button--filled-primary my-7 w-full py-4" <?php if ($forgotPasswordButtonViewModel->disabled()): ?> disabled data-recaptcha-btn<?php endif; ?>>
                             <span><?= $escaper->escapeHtml(__('Submit')) ?></span>
                         </button>
                     </div>
-                    <div class="flex justify-center mt-5">
-                        <a class="underline"
-                           href="<?= $escaper->escapeUrl($block->getLoginUrl()) ?>"><span><?= $escaper->escapeHtml(__('Cancel')) ?></span></a>
+                    <div class="w-full text-center text-md tracking-widest">
+                        <a class="link link--primary" href="<?= $escaper->escapeUrl($block->getLoginUrl()) ?>" x-element-transition-trigger><span><?= $escaper->escapeHtml(__('Cancel')) ?></span></a>
                     </div>
                 </div>
             </form>
