--- a/app/design/frontend/Satoshi/Hyva/Magento_Review/templates/customer/list.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Review/templates/customer/list.phtml
@@ -1,30 +1,16 @@
 <?php
 
-/**
- * Hyvä Themes - https://hyva.io
- * Copyright © Hyvä Themes 2020-present. All rights reserved.
- * This product is licensed per Magento install
- * See https://hyva.io/license
- */
-
 use Hyva\Theme\Model\ViewModelRegistry;
-use Hyva\Theme\ViewModel\HeroiconsOutline;
-use Hyva\Theme\ViewModel\HeroiconsSolid;
 use Hyva\Theme\ViewModel\Customer\ReviewList;
 use Hyva\Theme\ViewModel\Store;
 use Hyva\Theme\ViewModel\StoreConfig;
+use Hyva\Theme\ViewModel\SvgIcons;
 use Magento\Framework\Escaper;
 use Magento\Framework\View\Element\Template;
 
 /** @var Template $block */
 /** @var Escaper $escaper */
 /** @var ViewModelRegistry $viewModels */
-
-/** @var HeroiconsOutline $heroicons */
-$heroicons = $viewModels->require(HeroiconsOutline::class);
-
-/** @var HeroiconsSolid $heroiconsSolid */
-$heroiconsSolid = $viewModels->require(HeroiconsSolid::class);
 
 /** @var ReviewList $viewModelCustomerReviews */
 $viewModelCustomerReviews = $viewModels->require(ReviewList::class);
@@ -42,6 +28,11 @@ $storeCode = $viewModelStore->getStoreCode();
 
 $baseUrl = $block->getBaseUrl();
 $ratingSteps = 5;
+
+/** @var SvgIcons $hyvaicons */
+
+$hyvaicons = $viewModels->require(SvgIcons::class);
+
 ?>
 
 <div id="content"
@@ -73,7 +64,7 @@ $ratingSteps = 5;
                                :class="{'cursor-default' : currentPage < 2}"
                                title="<?= $escaper->escapeHtmlAttr(__('Previous')) ?>">
                                 <span>
-                                    <?= $heroicons->chevronLeftHtml('', 20, 20); ?>
+                                    left
                                 </span>
                             </a>
                         </li>
@@ -108,7 +99,7 @@ $ratingSteps = 5;
                                :class="{'cursor-default' : currentPage >= pageInfo.total_pages}"
                                href="#" title="<?= $escaper->escapeHtmlAttr(__('Next')) ?>">
                                 <span>
-                                    <?= $heroicons->chevronRightHtml('', 20, 20); ?>
+                                    right
                                 </span>
                             </a>
                         </li>
@@ -119,16 +110,16 @@ $ratingSteps = 5;
     </template>
     <template x-if="reviews && reviews.length">
         <div>
-            <template x-for="review in reviews" :key="review">
-                <div class="mb-5 card p-5 rounded-xl">
+            <template x-for="(review, index) in reviews" :key="index">
+                <div class="mb-5 card p-5 rounded-xl bg-bg-400">
                     <div class="flex gap-5 md:gap-5 flex-row mb-3">
-                        <div class="flex-shrink-0 w-20 h-20 md:w-32 md:h-32 rounded-xl overflow-hidden">
+                        <div class="flex-shrink-0 w-16 h-20 md:w-32 md:h-[158px] rounded-xl overflow-hidden">
                             <img :src="review.product && review.product.image && review.product.image.url"
                                  :alt="review.product && review.product.image && review.product.image.label"
                                  class="w-full h-full object-cover"/>
                         </div>
                         <div>
-                            <p class="font-bold mb-1">
+                            <p class="font-bold text-lg mb-1">
                                 <a :href="review.product && review.product.url_key && (
                                 '<?= $escaper->escapeJs($baseUrl) ?>' +
                                  review.product.url_key  +
@@ -150,10 +141,10 @@ $ratingSteps = 5;
                                         <template x-for="i in <?= $escaper->escapeJs($ratingSteps) ?>">
                                             <div>
                                                 <template x-if="i <= item.value">
-                                                    <?= $heroiconsSolid->starHtml('text-primary-600'); ?>
+                                                    <?= $hyvaicons->renderHtml('star', 'text-primary-600 text-xl'); ?>
                                                 </template>
                                                 <template x-if="i > item.value">
-                                                    <?= $heroiconsSolid->starHtml('text-gray-300'); ?>
+                                                    <?= $hyvaicons->renderHtml('star', 'text-primary-600 text-xl'); ?>
                                                 </template>
                                             </div>
                                         </template>
